<resources>
    <string name="app_name">GranCentre</string>
    <string name="TestRestaurant">Restaurante Os Galegos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bellesa_essencial">BELLESA ESSENCIAL</string>
    <string name="direccioBellesa">23-25, Carrer de Corró, 08401 Granollers, Barcelona</string>
    <string name="carme_estilistes">CARME ESTILISTES</string>
    <string name="direccioCarme">Carrer de Josep Torras I Bages, 35, 08401 Granollers, Barcelona</string>
    <string name="carol_bruguera">CAROL BRUGUERA</string>
    <string name="direccioCarol">Plaça Lluís Perpinyà, 4, 08400 Granollers, Barcelona</string>
    <string name="come_away">Come Away</string>
    <string name="descripcioComeAway">La pel·lícula mostra als personatges principals d\'Alice \'s Adventures in Wonderland i Peter Pan com a germans que intenten ajudar els seus pares a superar la mort del seu fill gran</string>
    <string name="all_my_life">All my life</string>
    <string name="descripcioAllMyLife">Basat en la història real de Solomon Chau i Jennifer Carter, una jove parella que es precipita a ajuntar el casament després que a un d’ells se li diagnostiqui un càncer de fetge.</string>
    <string name="el_verano_que_vivimos">El verano que vivimos</string>
    <string name="descripcioElVeranoQueVivimos">És una pel·lícula espanyola dramàtica de 2020 dirigida per Carlos Seus i protagonitzada per Blanca Suárez i Javier Rey.</string>
    <string name="agudo_z">AGUDO Z</string>
    <string name="direccioAgudoZ">Carrer de Santa Anna, 21, 08401 Granollers, Barcelona</string>
    <string name="barbany">BARBANY</string>
    <string name="direccioBarbany">Carrer Anselm Clavé, 44, 08401 Granollers, Barcelona</string>
    <string name="insitu_skate_shop_gallery">INSITU SKATE SHOP GALLERY</string>
    <string name="direccioInSitu">Carrer del Lliri, 11, 08401 Granollers, Barcelona</string>
    <string name="portagon_autos">PORTAGON AUTOS</string>
    <string name="direccioPortagon">Carrer Sant Antoni Maria Claret, 15, 08402 Granollers, Barcelona</string>
    <string name="vall_s_motor_ii">VALLÉS MOTOR II</string>
    <string name="direccioVallesMotor">Carretera Nacional 152a, Km 26, 5, 08401 Granollers, Barcelona</string>
    <string name="grup_d_automoci_i_serveis_pruna">GRUP D\'AUTOMOCIÓ I SERVEIS PRUNA</string>
    <string name="direccioGrupsAuto">Km 19,060, Carretera C-17, 08403 Granollers, Barcelona</string>
    <string name="Marisquer_os_galegos">Restaurante Marisquería Os Galegos</string>
    <string name="Direccio_os_galegos">Travessia del Lledoner, 9, Granollers, Barcelona</string>
    <string name="restaurante_la_piranya">Restaurante La Piranya</string>
    <string name="Direccio_la_piranya">Francesc Macia, 300, Granollers, Barcelona</string>
    <string name="can_pipa">Restaurante Can Pipa</string>
    <string name="direccio_can_pipa">Carrer Aureli Font, 5, Granollers, Barcelona</string>
    <string name="restaurante_la_tagliatella">Restaurante La Tagliatella</string>
    <string name="drieccio_la_tagliatela">Carrer de Joan Prim, 42, Granollers, Barcelona</string>
    <string name="la_mezza_luna">La Mezza Luna</string>
    <string name="direccio_mezza_luna">Carrer de Foment, 2, Granollers, Barcelona</string>
    <string name="il_cenacolo">Pizzeria Spaghetteria IL CENACOLO</string>
    <string name="direccio_il_cenacolo">Josep Umbert 109, Granollers, Barcelona</string>
    <string name="el_mirallet">El Mirallet</string>
    <string name="direccio_el_mirallet">Plaça de la Portxada,39, Granollers, Barcelona</string>
    <string name="la_cookessa_bio_granollers">La Cookessa Bio Granollers</string>
    <string name="direccio_cookesa_bio">Carrer de Ponent, 25, Granollers, Barcelona</string>
    <string name="nima_de_granollers">Ànima de Granollers</string>
    <string name="direccio_anima_granollers">Griona, 4, Granollers, Barcelona</string>
    <string name="parking_escolapi_blau">Parking Escolapi Blau</string>
    <string name="plazas_escolapi">80 plazas/ 23 disponibles</string>
    <string name="direccio_escolapi">C.Francisco de Quevedo, S/n C. Oriente</string>
    <string name="parking_corona">Parking Corona</string>
    <string name="pazas_corona">120 plazas/ 35 disponibles</string>
    <string name="direccion_corona">C.Sant Josep de Calassanç</string>
    <string name="estacio_atenea">Parking Estació-Atenea</string>
    <string name="plazas_estacio_atenea">76 plazas/ 43 disponibles</string>
    <string name="direccio_estacio_atenea">C.Passeig Cristòfol Colom</string>
</resources>